--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,8 +2,18 @@
 
 <ul>
     <% @tasks.each do |task| %>
-      <li><input type="checkbox"><label><%= link_to task.title, task_show_path(task.id) %></label></li>
+      <li>
+        <input type="checkbox">
+        <label><%= link_to task.title, task_page_path(task.id)%></label>
+
+
+      </li>
     <% end %>
 </ul>
 
 
+
+
+
+
+<p><a href="/tasks">Add a New Task </a></p>
